src/test/deca/context/valid/27_IfThen.deca
// Description:
//    Test le NoOperation
//
// Résultats:
//	1
//
// Historique:
//    cree le 16/01/2022

{
        int i = 1;
        if (i <= 2) {
        	println(i);
        }
}
