src/test/deca/context/invalid/tests/undefinedIdentifier.deca
// Description:
//    Affectation et typage
//
// Resultats:
//	Ligne 12: ContextualError: identifier not defined
// 
// Historique:
//    cree le 01/01/2022

{
   // Doit etre refuse.
   println(i);
}
